--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id="app-container"></div>
+    <script src="vendor/timbre.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
