--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
   <head>
     <title>Dave Conservatorie Exercice example</title>
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
+    <!--[if IE]>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet" type="text/css">
+    <![endif]-->
   </head>
   <body>
     <div id="app-container"></div>
